<resources>
    <string name="app_name">TestAppAll</string>
    <string name="app_tagline">Where Stories Come Alive</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_with_email">Create with E-mail</string>
    <string name="receive_communications">I would like to receive communications from Srishti, such as personal recommendations, news and offers.</string>
    <string name="consent_marketing">I consent to Srishti sharing my registration data with its marketing providers (even outside the EU/EEA) so I see personalized ads that are more relevant to me.</string>
    <string name="terms_agreement">By creating an account, you agree to Srishti\'s Terms and Conditions.</string>
    <string name="login_with_google">Log in with Google</string>
    <string name="login_with_email">Log in with E-mail</string>
    <string name="forgot_password_prompt">Forgot your signup method or password?</string>
    <string name="reset_password">Reset your password</string>
    <string name="select_categories">Select 3 or more categories</string>
    <string name="category_subtitle">Start your Srishti journey with tailored recommendations, just for you. Don\'t worry - you can still browse all titles.</string>
    <string name="continue_text">Continue</string>
    <string name="skip">Skip</string>
    <string name="reader_top_choice">Reader\'s Top Choice</string>
    <string name="editors_choice">Editor\'s Choice</string>
    <string name="trending_series">Trending Series</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age_optional">Age (Optional)</string>
    <string name="register">Register</string>
    <string name="success_test">Successful</string>
    <string name="fail_test">Failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">1:755574010889:android:813fdd981d23acb58574d8.apps.googleusercontent.com</string>
    <string name="add">Add</string>
    <string name="alice_a_curious_child">Alice, A Curious Child</string>
    <string name="science_frixtion">Science Frixtion</string>

    <style name="HeaderTextStyle">
        <item name="android:layout_width">150dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:gravity">center</item>
        <item name="android:textSize">14sp</item>
        <item name="android:textColor">#FF0000</item>
        <item name="android:padding">8dp</item>
        <item name="android:background">#CCCCCC</item>
    </style>

    <style name="RoundedImageView">
        <item name="cornerFamily">rounded</item>
        <item name="cornerSize">12dp</item>
    </style>


</resources>